# oballtus

./: .tags  .tags_sorted_by_file  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  makefile  oballtus.files  oballtus.sublime-project  oballtus.sublime-workspace  todo.md
include/: arrow.h  ball.h  borders.h  button.h  collision.h  dot.h  ielement.h  iscene.h  libs.h  line.h  model.h  object.h  quad.h  scene.h  shader.h  sphere.h  text.h  timeline.h  ui.h  universe.h
src/: main.cpp
