cmake_minimum_required(VERSION 2.8)
project(oballtus)
set(SOURCE_EXE src/main.cpp)
include_directories(include)
find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
include_directories(${GLUT_INCLUDE_DIRS})
include_directories(${OpenGL_INCLUDE_DIRS})
include_directories($(GLEW_INCLUDE_DIRS))
link_directories(${GLUT_LIBRARY_DIRS})
link_directories(${GLEW_LIBRARY_DIRS})
link_directories(${OpenGL_LIBRARY_DIRS})
if(NOT GLUT_FOUND)
    message(ERROR: GLUT not found!")
endif(NOT GLUT_FOUND)
if(NOT OPENGL_FOUND)
    message(ERROR: OPENGL not found!")
endif(NOT OPENGL_FOUND)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_EXE_LINKER_FLAGS "-v")
add_executable(oballtus ${SOURCE_EXE} include/shader.h)
target_link_libraries(oballtus ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${FREETYPE_LIBRARIES} ${GLEW_LIBRARY})
