cmake_minimum_required(VERSION 2.8)
project(oballtus)
set(SOURCE_EXE src/main.cpp)
set(CMAKE_MODULE_PATH "/usr/share/cmake-3.2/Modules/" ${CMAKE_MODULE_PATH})
include_directories(include)
find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(Freetype REQUIRED)
find_package(FTGL REQUIRED)
include_directories(${GLUT_INCLUDE_DIRS})
include_directories(${OpenGL_INCLUDE_DIRS})
include_directories($(GLEW_INCLUDE_DIRS))
include_directories(${FREETYPE_INCLUDE_DIRS})
include_directories(${FTGL_INCLUDE_DIRS})
link_directories(${GLUT_LIBRARY_DIRS})
link_directories(${GLEW_LIBRARY_DIRS})
link_directories(${OpenGL_LIBRARY_DIRS})
link_directories(${FREETYPE_LIBRARY_DIRS})
link_directories(${FTGL_LIBRARY_DIRS})
if(NOT GLUT_FOUND)
    message(ERROR: GLUT not found!")
endif(NOT GLUT_FOUND)
if(NOT GLEW_FOUND)
    message(ERROR: GLEW not found!")
endif(NOT GLEW_FOUND)
if(NOT OPENGL_FOUND)
    message(ERROR: OPENGL not found!")
endif(NOT OPENGL_FOUND)
if(NOT FTGL_FOUND)
    message(ERROR: FTGL not found!")
endif(NOT FTGL_FOUND)
set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_EXE_LINKER_FLAGS "-v")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
add_executable(oballtus ${SOURCE_EXE} include/shader.h include/arrow.h)
target_link_libraries(oballtus ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${FTGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${GLEW_LIBRARY})